Update and rename landing.html to index.html

--- a/index.html
+++ b/index.html
@@ -43,18 +43,18 @@
 
         <div class="follow-us">
           <p>Find More:</p>
-          <a href="#"><img src="images/facebook icon.png" alt=""></a>
-          <a href="#"><img src="images/twitter icon.png" alt=""></a>
-          <a href="#"><img src="images/instagram icon.png" alt=""></a>
-          <a href="#"><img src="images/linkedin icon.png" alt=""></a>
+          <a href="#"><img src="facebook icon.png" alt=""></a>
+          <a href="#"><img src="twitter icon.png" alt=""></a>
+          <a href="#"><img src="instagram icon.png" alt=""></a>
+          <a href="#"><img src="linkedin icon.png" alt=""></a>
         </div>
 
     </section>
 
     <div class="image-section">
-      <img id="image" src="images/clothing-brand-1.jpg" alt="">
+      <img id="image" src="clothing-brand-1.jpg" alt="">
 
-      <img id="image" class="image2" src="images/clothing-brand-2.jpg"  alt="" >
+      <img id="image" class="image2" src="clothing-brand-2.jpg"  alt="" >
     </div>
 
     <div class="container"></div>
@@ -63,23 +63,23 @@
 
             <div class="gallery">
 
-              <img src="images/clothing-brand-3.jpg" alt="">
+              <img src="clothing-brand-3.jpg" alt="">
 
-              <img src="images/clothing-brand-5.jpg" alt="">
+              <img src="clothing-brand-5.jpg" alt="">
 
-              <img src="images/clothing-brand-6.jpg" alt="">
+              <img src="clothing-brand-6.jpg" alt="">
 
-              <img src="images/clothing-brand-7.jpg" alt="">
+              <img src="clothing-brand-7.jpg" alt="">
 
-              <img src="images/clothing-brand-8.jpg" alt="">
+              <img src="clothing-brand-8.jpg" alt="">
 
-              <img src="images/clothing-brand-1-2.jpg" />
+              <img src="clothing-brand-1-2.jpg" />
 
-              <img src="images/shoe-brand-1.jpg" />
+              <img src="shoe-brand-1.jpg" />
 
-              <img src="images/clothing-brand-1-2.jpg" alt="" />
+              <img src="clothing-brand-1-2.jpg" alt="" />
 
-              <img src="images/shoe-brand-2.jpg"  alt="shoe" />
+              <img src="shoe-brand-2.jpg"  alt="shoe" />
 
             </div>
 
@@ -95,7 +95,7 @@
 
           <h2>&#8358 80,740</h2>
           <div class="img">
-            <img src="images/shoe-brand-4.jpg" alt="">
+            <img src="shoe-brand-4.jpg" alt="">
           </div>
           <ul>
             <li>Lorem ipsum.</li>
@@ -110,7 +110,7 @@
 
           <h2> &#8358 80,490</h2>    
           <div class="img">
-            <img src="images/shoe-brand-5.jpg" alt="">
+            <img src="shoe-brand-5.jpg" alt="">
           </div>
           <ul>
             <li>Lorem ipsum.</li>
@@ -125,7 +125,7 @@
 
           <h2>&#8358 81,240</h2>
           <div class="img">
-            <img src="images/shoe-brand-6.jpg" alt="">
+            <img src="shoe-brand-6.jpg" alt="">
           </div>
           <ul>
             <li>Lorem ipsum.</li>
@@ -145,10 +145,10 @@
 
     <div class="follow-us">
       <p>follow us for more</p>
-      <a href="#"><img src="images/facebook icon.png" alt=""></a>
-      <a href="#"><img src="images/twitter icon.png" alt=""></a>
-      <a href="#"><img src="images/instagram icon.png" alt=""></a>
-      <a href="#"><img src="images/linkedin icon.png" alt=""></a>
+      <a href="#"><img src="facebook icon.png" alt=""></a>
+      <a href="#"><img src="twitter icon.png" alt=""></a>
+      <a href="#"><img src="instagram icon.png" alt=""></a>
+      <a href="#"><img src="linkedin icon.png" alt=""></a>
     </div>
 
     <ul>
