--- a/index.html
+++ b/index.html
@@ -95,28 +95,28 @@
 
           <h2>&#8358 80,740</h2>
           <div class="img">
-            <img src="shoe-brand-4.jpg" alt="">
+            <img src="shoe-brand-2.jpg" alt="">
           </div>
-          <ul>
-            <li>Lorem ipsum.</li>
-            <li>Lorem ipsum.</li>
-            <li>Lorem ipsum dolor.</li>
-            <li>Lorem ipsum.</li>
+          <ul>     
+            <li>Prada 1 Metro High</li>
+            <li>Off-White Chicago</li>
+            <li>Steal Blue and White.</li>
+            <li>Limited Quality.</li>
           </ul>
           <button class="btn">Place Order</button>
         </div>
 
         <div class="product" id="">
 
-          <h2> &#8358 80,490</h2>    
+          <h2>&#8358 80,490</h2>
           <div class="img">
             <img src="shoe-brand-5.jpg" alt="">
           </div>
           <ul>
-            <li>Lorem ipsum.</li>
-            <li>Lorem ipsum.</li>
-            <li>Lorem ipsum dolor.</li>
-            <li>Lorem ipsum.</li>
+             <li>Jordan 1 Retro High</li>
+            <li>Off-White Chicago</li>
+            <li>Yellow, Black and White.</li>
+            <li>Best Quality.</li>
           </ul>
           <button class="btn">Place Order</button>
         </div>
@@ -128,10 +128,10 @@
             <img src="shoe-brand-6.jpg" alt="">
           </div>
           <ul>
-            <li>Lorem ipsum.</li>
-            <li>Lorem ipsum.</li>
-            <li>Lorem ipsum dolor.</li>
-            <li>Lorem ipsum.</li>
+            <li>Jordan 1 Retro High</li>
+            <li>Off-White Chicago</li>
+            <li>Red and White.</li>
+            <li>High Target.</li>
           </ul>
           <button class="btn">Place Order</button>
         </div>
