--- a/index.html
+++ b/index.html
@@ -135,6 +135,51 @@
           </ul>
           <button class="btn">Place Order</button>
         </div>
+
+          <div class="product" id="">
+
+          <h2>&#8358 81,240</h2>
+          <div class="img">
+            <img src="shoe-brand-1.jpg" alt="">
+          </div>
+          <ul>
+            <li>Jordan 1 Retro High</li>
+            <li>Off-White Chicago</li>
+            <li>Red and White.</li>
+            <li>High Target.</li>
+          </ul>
+          <button class="btn">Place Order</button>
+        </div>
+
+          <div class="product" id="">
+
+          <h2>&#8358 81,240</h2>
+          <div class="img">
+            <img src="shoe-brand-4.jpg" alt="">
+          </div>
+          <ul>
+            <li>Jordan 1 Retro High</li>
+            <li>Off-White Chicago</li>
+            <li>Red and White.</li>
+            <li>High Target.</li>
+          </ul>
+          <button class="btn">Place Order</button>
+        </div>
+
+          <div class="product" id="">
+
+          <h2>&#8358 81,240</h2>
+          <div class="img">
+            <img src="shoe-brand-3.jpg" alt="">
+          </div>
+          <ul>
+            <li>Jordan 1 Retro High</li>
+            <li>Off-White Chicago</li>
+            <li>Red and White.</li>
+            <li>High Target.</li>
+          </ul>
+          <button class="btn">Place Order</button>
+        </div>
       </section>
     </div>
   </div>
