--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
           <button class="btn">Place Order</button>
         </div>
 
-          <div class="product" id="">
+          <div class="product" id="product-id">
 
           <h2>&#8358 81,240</h2>
           <div class="img">
@@ -151,7 +151,7 @@
           <button class="btn">Place Order</button>
         </div>
 
-          <div class="product" id="">
+          <div class="product" id="product-id">
 
           <h2>&#8358 81,240</h2>
           <div class="img">
@@ -166,7 +166,7 @@
           <button class="btn">Place Order</button>
         </div>
 
-          <div class="product" id="">
+          <div class="product" id="product-id">
 
           <h2>&#8358 81,240</h2>
           <div class="img">
