--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
       <li><a href="#">Terms</a></li>
       <li><a href="#">Contact</a></li>
     </ul>
-    <span>Winners © 2023</span>
+    <span>Vincent Chibueze © 2023</span>
   </footer>
 
 </body>
